// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SwitchBaseInput /> should render correctly is disabled 1`] = `
<SwitchBaseInputWrapper>
  <SwitchBaseInputField
    aria-disabled={true}
    checked={false}
    data-id="testId"
    data-test-id="testId"
    id="test-id"
    name="test-name"
    onBlur={[MockFunction]}
    onChange={[MockFunction]}
    onFocus={[MockFunction]}
    onMouseEnter={[MockFunction]}
    onMouseLeave={[MockFunction]}
    test-id="testId"
    type="checkbox"
  />
</SwitchBaseInputWrapper>
`;

exports[`<SwitchBaseInput /> should render correctly with default props 1`] = `
<SwitchBaseInputWrapper>
  <SwitchBaseInputField
    aria-disabled={false}
    checked={false}
    data-id="testId"
    data-test-id="testId"
    id="test-id"
    name="test-name"
    onBlur={[MockFunction]}
    onChange={[MockFunction]}
    onFocus={[MockFunction]}
    onMouseEnter={[MockFunction]}
    onMouseLeave={[MockFunction]}
    test-id="testId"
    type="checkbox"
  />
</SwitchBaseInputWrapper>
`;

exports[`<SwitchBaseInput /> should render correctly with role 1`] = `
<SwitchBaseInputWrapper>
  <SwitchBaseInputField
    aria-disabled={false}
    checked={false}
    data-id="testId"
    data-test-id="testId"
    id="test-id"
    name="test-name"
    onBlur={[MockFunction]}
    onChange={[MockFunction]}
    onFocus={[MockFunction]}
    onMouseEnter={[MockFunction]}
    onMouseLeave={[MockFunction]}
    role="testRole"
    test-id="testId"
    type="checkbox"
  />
</SwitchBaseInputWrapper>
`;
